opam-version: "1.2"
name: "loga"
version: "0.0.1"
maintainer: "yutopp <yutopp@gmail.com>"
author: "yutopp <yutopp@gmail.com>"
homepage: "https://github.com/yutopp/loga"
bug-reports: "https://github.com/yutopp/loga/issues"
license: "Boost License Version 1.0"
dev-repo: "https://github.com/yutopp/loga.git"

available: [ocaml-version >= "4.03.0"]

build: [[ "jbuilder" "build" "-p" name "-j" jobs ]]

depends: [
  "jbuilder"                {build & >= "1.0+beta8"}
  "ocaml-migrate-parsetree" {>= "1.0"}
]
